// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#components/field/checkbox <Field /> With additional props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="checkbox"
/>
`;

exports[`#components/field/checkbox <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  name="MOCK NAME"
  type="checkbox"
/>
`;
